# python-eltiempoes

./: README.md  requirements.txt  setup.cfg
.github/workflows/: unittest.yml
eltiempoes/: __init__.py  constants.py  main.py  web_scraping.py
eltiempoes/utils/: create_urls.py
tests/: eltiempo_test.py  test_eltiempo_class.py  test_estaciones.py
