[metadata]
name = python-eltiempoes
version = 0.0.4
author = Francisco Puig
# author_email = 
long_description = file: README.md
long_description_content_type= text/markdown
keywords = weather, elTiempo.es
# url = https://github.com/
# project_urls =
#     Bug Tracker = https://github.com/
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux

[options]
install_requires = 
    beautifulsoup4 == 4.11.1
    requests == 2.27.1
    Unidecode == 1.3.4
setup_requires =
   beautifulsoup4 == 4.11.1
    requests == 2.27.1
    Unidecode == 1.3.4
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tools*
    tests*
    venv*

